# eli

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  build.lua  build_n_test.sh  config.hjson  eli  http.lua  install.sh  run_tests.sh  streams-test.lua  test-utils.sh
.github/template/build-n-cache/: action.yml
.github/template/prepare-test/: action.yml
.github/workflow/: release.yml
.github/workflows/: release.yml  test-pr.yml
cmake_files/: lcurl_CMakeLists.txt  lfs_CMakeLists.txt  lzip_CMakeLists.txt  lzlib_CMakeLists.txt
containers/test/: Dockerfile
lib/: README.md  init.lua
lib/eli/: Logger.lua  cli.lua  elify.lua  env.lua  fs.lua  global.lua  hash.lua  ipc.lua  lz.lua  net.lua  os.lua  path.lua  proc.lua  tar.lua  util.lua  ver.lua  zip.lua
lib/eli/extensions/: io.lua  os.lua  string.lua  table.lua
lib/eli/internals/: util.lua
lib/eli/net/: http.lua  url.lua
lib/native/proc/: CMakeLists.txt  lnproc.c  lnproc.h
lib/native/proc/src/: lnproc.c  lnproc.h
lib/tests/: all.lua  bigint.lua  cli.lua  elify.lua  elios.lua  env.lua  fs.lua  global.lua  hash.lua  hjson.lua  http.lua  ipc.lua  lz.lua  net.lua  proc.lua  proc2.lua  signal.lua  t_base64.lua  t_bigint.lua  t_hjson.lua  tar.lua  u-test.lua  util.lua  ver.lua  zip.lua
lib/tests/assets/: f1.txt  f2.txt  f3.txt  ipc-client.lua  ipc-server.lua  signal-catch-win.lua  signal-catch.lua  signal-reset.lua  test.file  test.script  test.tar  test.unix.script
lib/tests/assets/copy-dir2/: file.txt
lib/tests/assets/scripts/: delayed.bat  delayed.script  delayed.sh  stdout_stderr.script
lib/tests/extensions/: io.lua  string.lua  table.lua
lib/tests/internals/: util.lua
lib/tests/net/: url.lua
misc/cmake_files/: lzip_CMakeLists.txt
misc/deps-overlay/corehttp/: CMakeLists.txt
misc/deps-overlay/lua/: eliconf.h
misc/deps-overlay/lua-zlib/: CMakeLists.txt
misc/toolchains/zig/: cc.sh  cxx.sh  dlltool.cmd  ld.ldd.cmd  ld.ldd.sh  ld64.lld.sh  lib.cmd  lld-link.cmd  toolchain.cmake
tools/: amalg.lua  build.lua  create-env.lua  download.lua  embedable.lua  embedableStringGenerator.lua  escape.lua  meta-generator.lua  templates.lua  test.ps1  test.sh  util.lua
tools/cmake_files/: lcurl_CMakeLists.txt  lua_CMakeLists.txt  lzip_CMakeLists.txt  lzlib_CMakeLists.txt
tools/patches/: deps.lua
tools/templates/: cmake-clang.mustache  cmake-gcc.mustache  core_http_client.c.mustache  core_http_client.h.mustache  curl-mbed-ca-loader.mustache  eli-init.mustache  eli-proc-extra-kill-h.mustache  linit-libs-list.mustache  linit-libs-load.mustache  lss-cas.mustache  mbed-eli-overrides.mustache
